--- a/vblog-ui/src/component/Article/ArticleCard.css
+++ b/vblog-ui/src/component/Article/ArticleCard.css
@@ -2,16 +2,30 @@
     width: 100%
 }
 
-.authenticated-area-container{
+.authenticated-area-container {
     display: none;
 }
 
-.article-card-root:hover .authenticated-area-container{
+.article-card-root:hover .authenticated-area-container {
     display: inline;
 }
 
-.action-area-container{
+.action-area-container {
     width: 100%;
     display: flex;
     justify-content: space-between;
+}
+
+.article-card-content {
+    position: relative;
+    max-height: 500px;
+    overflow: hidden;
+}
+
+.content-mask {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0px;
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 }
