- Change Home page layout - Add image upload feature

--- a/vblog-ui/src/component/Sidebar/sidebar.css
+++ b/vblog-ui/src/component/Sidebar/sidebar.css
@@ -21,3 +21,12 @@
   margin: 0px;
   padding-inline-start: 0px;
 }
+
+.sidebar-container{
+  position: sticky;
+  top: 0;
+}
+
+.sidebar-container .MuiList-root .MuiListItem-root{
+  padding-right: 0px;
+}
